# pypolychord-bilby

./: README.md  pyproject.toml
.github/workflows/: tests.yml
src/pypolychord_bilby/: __init__.py  plugin.py
tests/: test_bilby_integration.py
