[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pypolychord-bilby"
authors = [
    {name = "Colm Talbot", email = "colm.talbot@ligo.org"},
    {name = "Michael J. Williams", email = "michael.williams@ligo.org"},
]
description = ""
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "bilby>=2.3.0",
    "numpy",
]

dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.setuptools_scm]

[tool.black]
line-length = 79

[project.entry-points."bilby.samplers"]
pypolychord = "pypolychord_bilby.plugin:PyPolyChord"
